--- a/index.html
+++ b/index.html
@@ -111,28 +111,38 @@
                         <div class="feedback__ratings">
 
                             <div class="ratings__item">
-                                <label for="bar_5">5</label>
-                                <progress class="progress_bar" id="bar_5" value="75" max="100">70%</progress>
+                                <span class="bar">5</span>
+                                <div class="progress">
+                                    <div class="progress__color progress__color__5"></div>
+                                </div>
                             </div>
 
                             <div class="ratings__item">
-                                <label for="bar_4">4</label>
-                                <progress class="progress_bar" id="bar_4" value="85" max="100">85%</progress>
+                                <span class="bar">4</span>
+                                <div class="progress">
+                                    <div class="progress__color progress__color__4"></div>
+                                </div>
                             </div>
 
                             <div class="ratings__item">
-                                <label for="bar_3">3</label>
-                                <progress class="progress_bar" id="bar_3" value="65" max="100">65%</progress>    
+                                <span class="bar">3</span>
+                                <div class="progress">
+                                    <div class="progress__color progress__color__3"></div>
+                                </div> 
                             </div>
 
                             <div class="ratings__item">
-                                <label for="bar_2">2</label>
-                                <progress class="progress_bar" id="bar_2" value="15" max="100">15%</progress>    
+                                <span class="bar">2</span>
+                                <div class="progress">
+                                    <div class="progress__color progress__color__2"></div>
+                                </div>   
                             </div>
 
                             <div class="ratings__item">
-                                <label for="bar_1">1</label>
-                                <progress class="progress_bar" id="bar_1" value="10" max="100">10%</progress>    
+                                <span class="bar">1</span>
+                                <div class="progress">
+                                    <div class="progress__color progress__color__1"></div>
+                                </div>     
                             </div> 
                         </div>
                     </div>
